--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
 
-  "name": "Playback Rate Controller",
-  "short_name": "PRC",
-  "description": "PRC allows changing video and audio playback rate giving you full control over speed with which your browser plays HTML5 media.",
-  "version": "1.2.3",
+  "name": "HTML5 Media Rate Controller",
+  "short_name": "MRC",
+  "description": "MRC allows changing video and audio playback rate giving you full control over speed with which your browser plays HTML5 media.",
+  "version": "1.0.0",
 
   "icons": {
     "16":  "icon-16x16.png",
