--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "HTML5 Media Rate Controller",
   "short_name": "MRC",
-  "description": "HTML5 Media Rate Controller allows changing video and audio playback rate and time giving you full control over speed with which your browser plays HTML5 media.",
+  "description": "HTML5 Media Rate Controller allows changing video and audio playback rate or time giving you control over media in your browser.",
   "version": "1.0.1",
 
   "icons": {
